# sdgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: add_sdgl_executable.cmake  copy_assets.cmake  copy_file.cmake
include/sdgl/: README.md  graphics.h  mathf.h  sdgl.h
lib/: CMakeLists.txt  SDL_GameControllerDB.cmake  crunch.cmake  imgui.cmake  mojoAL.cmake
sdgl/: App.cpp  App.h  ArgParser.h  Asset.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Color.cpp  Color.h  ContentManager.h  Delegate.h  Gamepad.h  IPlugin.h  Key.h  PluginManager.cpp  PluginManager.h  Pool.h  Scene.cpp  Scene.h  SceneRunner.h  ServiceContainer.cpp  ServiceContainer.h  Shader.cpp  Shader.h  ShaderAttribs.cpp  ShaderAttribs.h  ShaderAttributes.cpp  ShaderAttributes.h  SpriteBatch.cpp  SpriteBatch.h  Texture2D.cpp  Texture2D.h  Tween.cpp  Tween.h  TweenFunction.cpp  Vector2.h  Window.cpp  Window.h  defaultShader.cpp  defaultShader.h  (+8 more)
sdgl/backends/: Backend.h  CMakeLists.txt
sdgl/backends/glfw3/: Glfw3Backend.cpp  Glfw3Backend.h  Glfw3Gamepad.cpp  Glfw3Gamepad.h  Glfw3ImGuiPlugin.h  Glfw3Keyboard.cpp  Glfw3Keyboard.h  Glfw3Mouse.h  Glfw3Window.cpp  Glfw3Window.h
sdgl/backends/sdl3/: CMakeLists.txt  ImGuiSdl3.h  README.md  Sdl3Backend.cpp  Sdl3Backend.h  Sdl3Window.cpp  Sdl3Window.h
sdgl/core/: Key.cpp  Key.h  Mouse.h  PluginManager.cpp  Window.h
sdgl/core/backends/: Backend.h  CMakeLists.txt
sdgl/core/backends/glfw3/: CMakeLists.txt  Glfw3.h  Glfw3Backend.cpp  Glfw3Backend.h  Glfw3Gamepad.h  Glfw3ImGuiPlugin.cpp  Glfw3ImGuiPlugin.h  Glfw3Keyboard.h  Glfw3Mouse.cpp  Glfw3Mouse.h  Glfw3Window.cpp  Glfw3Window.h
sdgl/core/backends/sdl3/: Sdl3Backend.cpp
sdgl/ecs/: ComponentSystemMgr.cpp  ComponentSystemMgr.h  Entity.h  IComponentSystem.h  ISystem.h  PriorityList.h  SystemManager.cpp  SystemManager.h  World.cpp  World.h
sdgl/graphics/: BMFontData.cpp  BMFontData.h  BitmapFont.cpp  BitmapFont.h  Color.cpp  FontText.h  RenderProgram.cpp  RenderProgram.h  Shader.cpp  Shader.h  SpriteBatch2D.cpp  SpriteBatch2D.h  Texture2D.cpp  Texture2D.h  TextureCache.cpp  TextureCache.h
sdgl/graphics/atlas/: CrunchAtlasData.cpp  CrunchAtlasData.h  TextureAtlas.cpp  TextureAtlas.h
sdgl/graphics/detail/: spriteBatch2DShader.inl
sdgl/graphics/font/: BMFontData.cpp  BMFontData.h  BitmapFont.cpp  BitmapFont.h  FontText.cpp  Glyph.h
sdgl/graphics/gles3/: Shader.cpp  ShaderAttribs.cpp  gl.h
sdgl/io/: Buffer.h  BufferView.cpp  BufferView.h  FileWriter.cpp  endian.h  io.cpp  io.h  stb_image_impl.cpp
sdgl/math/: Rectangle.h  TweenFunction.cpp  TweenFunction.h  Vector2.h  geometry.cpp  geometry.h  mathf.h  random.cpp
sdgl/mathf/: mathf.cpp  mathf.h
sdgl/platform/: emscripten.cpp  emscripten.h
src/: CMakeLists.txt
src/sdgl/: App.cpp  App.h  ArgParser.cpp  BitFlags.cpp  BitFlags.h  CMakeLists.txt  ContentManager.cpp  ContentManager.h  Delegate.h  SceneRunner.cpp  ServiceContainer.h  Tween.cpp  angles.h  assert.h  format.h  logging.cpp  logging.h  sdgl_traits.h  sdglib.h
src/sdgl/audio/: AudioEngine.cpp  AudioEngine.h  Sound.cpp  Sound.h  SoundInstance.cpp  SoundInstance.h  SoundInstanceImpl.inl  al.cpp  al.h  fmod.h
src/sdgl/audio/fmod/: SoundInstanceImpl.inl
src/sdgl/core/: Gamepad.cpp  Gamepad.h  GamepadConstants.cpp  GamepadConstants.h  IPlugin.h  InputManager.cpp  InputManager.h  Keyboard.h  Mouse.h  PluginManager.h  README.md  SdlGuard.h  Window.h
src/sdgl/core/backend/: Backend.h  CMakeLists.txt
src/sdgl/core/backend/sdl2/: Backend.cpp  Gamepad.cpp  ImGuiSdl2.cpp  ImGuiSdl2.h  Keyboard.cpp  Mouse.cpp  SdlGuard.cpp  SdlGuard.h  Window.cpp
src/sdgl/core/backend/sdl3/: CMakeLists.txt  ImGuiSdl3.cpp  ImGuiSdl3.h  Sdl3Backend.h  Sdl3Window.cpp  Sdl3Window.h
src/sdgl/graphics/: Color.h  Frame.h  RenderProgram.cpp  RenderProgram.h  Shader.cpp  ShaderAttribs.cpp  ShaderAttribs.h  SpriteBatch2D.cpp  SpriteBatch2D.h  SpriteBatchBase2D.cpp  SpriteBatchBase2D.h  Texture2D.cpp  Texture2D.h
src/sdgl/graphics/atlas/: CrunchAtlasData.cpp  CrunchAtlasData.h  TextureAtlas.cpp  TextureAtlas.h
src/sdgl/graphics/font/: BMFontData.cpp  BMFontData.h  BitmapFont.cpp  BitmapFont.h  FontText.cpp  FontText.h  Glyph.h
src/sdgl/graphics/gles3/: RenderProgram.cpp  SpriteBatch2D.cpp  Texture2D.cpp  gl.h  spriteBatch2DShader.inl
src/sdgl/io/: Buffer.h  BufferView.cpp  BufferView.h  FileWriter.cpp  FileWriter.h  endian.h  io.cpp  io.h  stb_image_impl.cpp
src/sdgl/io/convert/: content.cpp  content.h
src/sdgl/math/: Circle.cpp  Circle.h  Rectangle.h  Vector2.h  easings.cpp  easings.h  geometry.h  mathf.cpp  random.h
src/sdgl/platform/: emscripten.cpp  emscripten.h  index.html  main.js
src/sdgl/private/: sdgl.pch
tests/: BMFontData.test.cpp  BitFlags.test.cpp  CMakeLists.txt  CrunchAtlasData.test.cpp  ServiceContainer.test.cpp  TestTemplate.cpp  main.cpp
tests/asteroids/: Asteroids.h  CMakeLists.txt  Sprite.h  Transform.h  main.cpp
tests/asteroids/assets/images/: sheet.json
tests/asteroids/assets/images/rock/large/: rock_large.aseprite
tests/sandbox/: CMakeLists.txt  main.cpp
tests/sandbox/assets/bmfont/: font.fnt
tests/utests/: BMFontData.test.cpp  BufferView.test.cpp  CMakeLists.txt  CrunchAtlasData.test.cpp  PriorityList.test.cpp  Tween.test.cpp  lib.h
tests/utests/assets/bmfont/: arial.fnt
tools/: CMakeLists.txt
tools/content_pipeline/: CMakeLists.txt  ContentConfig.h  FileWatcher.h  FileWatcherCache.cpp  FileWatcherCache.h  README.md  ase_to_png.lua  cute_aseprite.cpp  cute_aseprite.h  main.cpp
